# meta-compiler

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  run.py  vcpkg.json
cmake/: flags.cmake
include/: CMakeLists.txt
include/compiler/lex/: Lexer.h  Lexer.hpp
include/compiler/tok/: Tok.h  Tok.hpp  TokFactory.h  TokFactory.hpp  TokKind.h  TokKind.hpp  TokVal.h  TokVal.hpp
include/compiler/tok/types/: F64.h  F64Tok.h  F64Tok.hpp  Ident.h  IdentTok.h  IdentTok.hpp
include/meta-compiler/: CMakeLists.txt  flags.hpp
include/meta-compiler/lex/: Lexer.hpp
include/meta-compiler/lex/error/: LexerErrorBase.hpp
include/meta-compiler/stl/: CMakeLists.txt  stl.pch
include/meta-compiler/tok/: Tok.hpp  TokFactory.hpp
include/meta-compiler/tok/types/: F64Tok.hpp  IdentTok.hpp
lib/: CMakeLists.txt
lib/lex/: CMakeLists.txt  Lexer.cpp
lib/tok/: CMakeLists.txt  TokFactory.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests.cmake
tests/lex/: CMakeLists.txt
tests/lex_tests/: CMakeLists.txt  TestClass.cpp  TestClass.hpp  Tester.cpp  Tester.h  main.cpp
